[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipwho-ip-geolocation-api"
version = "1.0.2"
description = "The official Python SDK for the IPWho IP Geolocation API - Get detailed IP geolocation, timezone, connection, and security information with full type safety."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "IPWho SDK Contributors", email = "info@ipwho.org"}
]
keywords = [
    "ipwho",
    "ip-geolocation",
    "location",
    "timezone",
    "security",
    "vpn-detection",
    "tor-detection",
    "isp",
    "asn",
    "geolocation-api",
    "ip-api",
    "python",
    "sdk"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/lavrox/SDK-IPWho-Python"
Repository = "https://github.com/lavrox/SDK-IPWho-Python.git"
Documentation = "https://github.com/lavrox/SDK-IPWho-Python"
"Bug Tracker" = "https://github.com/lavrox/SDK-IPWho-Python/issues"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
